@@ -11,7 +11,7 @@ Build-Depends: libacl1-dev, libgpmg1-dev [linux-any], autoconf,
 # B-D for dpkg-vendor
  dpkg-dev (>= 1.15.1),
 # B-D for GUI support
- libgtk2.0-dev, libgtk-3-dev, libxaw7-dev, libxt-dev, libxpm-dev, libgnomeui-dev,
+ libgtk2.0-dev, libgtk-3-dev, libxaw7-dev, libxt-dev, libxpm-dev,
 # B-D for language interpreters
 # Update d/rules when ruby version changes
  libperl-dev, tcl-dev, python3-dev, ruby, ruby-dev, lua5.2, liblua5.2-dev
@@ -28,7 +28,7 @@ Package: vim-common
 Priority: important
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Recommends: vim | vim-gnome | vim-gtk | vim-gtk3 | vim-athena | vim-nox | vim-tiny
+Recommends: vim | vim-gtk | vim-gtk3 | vim-athena | vim-nox | vim-tiny
 # Move vim icon from vim-gui-common to vim-common
 Breaks: vim-gui-common (<< 2:7.4.488-4~)
 Replaces: vim-gui-common (<< 2:7.4.488-4~)
@@ -42,7 +42,7 @@ Description: Vi IMproved - Common files
 Package: vim-gui-common
 Architecture: all
 Multi-Arch: foreign
-Recommends: vim-gnome | vim-gtk | vim-gtk3 | vim-athena
+Recommends: vim-gtk | vim-gtk3 | vim-athena
 Depends: ${misc:Depends}
 Description: Vi IMproved - Common GUI files
  Vim is an almost compatible version of the UNIX editor Vi.
@@ -58,7 +58,7 @@ Depends: ${misc:Depends}
 # Upgrades across major versions need to update vim-tiny first, otherwise
 # vim-runtime's removal of the old diversions will fail
 Breaks: vim-tiny (<< ${source:Version})
-Recommends: vim | vim-gnome | vim-gtk | vim-gtk3 | vim-athena | vim-nox | vim-tiny
+Recommends: vim | vim-gtk | vim-gtk3 | vim-athena | vim-nox | vim-tiny
 Enhances: vim-tiny
 Description: Vi IMproved - Runtime files
  Vim is an almost compatible version of the UNIX editor Vi.
@@ -96,7 +96,7 @@ Description: Vi IMproved - enhanced vi editor - compact version
  the vi binary for base installations.
  .
  If a vim binary is wanted, try one of the following more featureful
- packages: vim, vim-nox, vim-athena, vim-gtk, vim-gtk3, or vim-gnome.
+ packages: vim, vim-nox, vim-athena, vim-gtk, or vim-gtk3.
 
 Package: vim
 Architecture: any
@@ -181,16 +181,9 @@ Description: Vi IMproved - enhanced vi editor - with Athena GUI
 
 Package: vim-gnome
 Priority: extra
-Architecture: any
-Depends: vim-gui-common (= ${source:Version}), vim-common (= ${binary:Version}), vim-runtime (= ${source:Version}), ${misc:Depends}, ${shlibs:Depends}
-Suggests: cscope, vim-doc, fonts-dejavu, gnome-icon-theme
-Provides: vim, gvim, editor, vim-perl, vim-python, vim-ruby, vim-tcl, vim-lua
-Description: Vi IMproved - enhanced vi editor - with GNOME2 GUI
- Vim is an almost compatible version of the UNIX editor Vi.
- .
- Many new features have been added: multi level undo, syntax
- highlighting, command line history, on-line help, filename
- completion, block operations, folding, Unicode support, etc.
- .
- This package contains a version of vim compiled with a GNOME2 GUI
- and support for scripting with Lua, Perl, Python, Ruby, and Tcl.
+Architecture: all
+Depends: vim-gtk3, ${misc:Depends}
+Section: oldlibs
+Description: Vi IMproved - enhanced vi editor (dummy package)
+ This is a transitional package to install the vim-gtk3 package.  You may
+ remove this package if nothing depends on it.
